feat: add support for mimetype saving
